--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,19 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
+    "axios": "^1.3.0",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.5.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -26,7 +33,9 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.2",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.4"
   }
 }
