--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.14",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "react-router-dom": "^6.8.0"
   }
 }
