--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.5.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.1",
