--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "dotenv": "^16.0.3",
+    "react": "^18.2.0",
     "react-router-dom": "^6.8.0"
   }
 }
