--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.14",
+    "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-router-dom": "^6.8.0"
   }
