--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
+    "argon2": "^0.30.3",
     "axios": "^1.3.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.5.1",
